--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/aaronjense/fullstack-webdev-course/issues"
   },
-  "homepage": "https://github.com/aaronjense/fullstack-webdev-course#readme"
+  "homepage": "https://github.com/aaronjense/fullstack-webdev-course#readme",
+  "dependencies": {
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0"
+  }
 }
