--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/aaronjense/fullstack-webdev-course#readme",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "bootstrap-social": "^5.1.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.12.9"
   }
 }
